# whillats

./: CMakeLists.txt  LICENSE  Makefile  README.md  third_party.sh
src/: espeak_tts.cc  espeak_tts.h  llama_device_base.cc  llama_device_base.h  silence_finder.h  whillats.cc  whillats.h  whillats_export.h  whisper_helpers.h  whisper_transcription.cc  whisper_transcription.h
test/: test_utils.cc  test_utils.h  test_whillats.cc
